# mstat_code

./: .gitignore
booksols/advanced_r/: notes.qmd  preamble.tex  styles.css
booksols/hyptooling/: .envrc  notes.qmd  pyproject.toml
booksols/miscr/: ExamsQuiz.txt  rsamples.qmd
booksols/mshiny/: ch1_app.R  ch1_ex1.R  ch1_ex2.R  ch1_ex5.R
booksols/r4ds/: ch1.qmd  ch12.qmd  ch13.qmd  ch14.qmd  ch15.qmd  ch16.qmd  ch17.qmd  ch19.qmd  ch3.qmd  ch5.qmd  ch9.qmd  misctest.qmd  sample.r
booksols/r4ds/ch19_files/libs/bootstrap/: bootstrap-5ceaa0138074f9df2fbbd33abcb1811e.min.css
booksols/rappreg/: Duncan_updated.csv  Duncan_updated.txt  ch1.qmd  ch2.qmd  ch3.qmd  ch4.qmd
